--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,10 +7,20 @@ body {
   font-family: 'Oswald', sans-serif;
 }
 
-.section{
-  margin: 0 auto;
-  width: 1900px;
- }
+.container {
+  max-width: 1900px;
+  min-width:390px;
+  @apply mx-auto;
+
+}
+
+
+ .bg-advantages {
+  background-image: url('/advantages_bg1.svg'), url('/advantages_bg2.svg');
+  background-position: left top, right bottom;
+  background-size: contain, 20% 20%;
+  background-repeat: no-repeat;
+}
 
 @layer base {
   :root {
@@ -20,9 +30,9 @@ body {
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 43 99% 55%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
+    --secondary: 0 0% 100%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
